7/25/2013
---------------------------
- KO Fixed XML layer loading bug
- KO Fixed error dialog incompatibility with 2.9.4.0
- KO Fixed error when triangulating on Windows in the exe version
- KO Fixed error when calling Zoom to Fit

5/9/2013
---------------------------
- KO Fixed an issue introduced by the use of Projection class by adding a __call__ method
- KO Added testRunner.py to run all unit tests, along with RenderWindow unit tests

5/8/2013
---------------------------
- KO Renamed Transformer class to Projection and added projection function to fully wrap pyproj

5/3/2013
---------------------------
- KO Fixed an issue with how Layer_maanger detects raster and vector layers

5/2/2013
---------------------------
- KO Added setup.cfg so that `python setup_library.py install` installs to the correct dir.
- KO Changed line editing mode to allow point selection when shift is held down

4/14/2013
---------------------------
- KO Refactored layer rendering logic into a new class LayerRendererOpenGL
- KO Fixed #471 (Enable MapRoom to Edit Soundings in a .VERDAT)

4/12/2013
---------------------------
- KO Refactored the logic for creating map elements from Application.py into MapController.py
- KO Refactored, and when possible removed, some layering violations caused by app_global references
- KO Changed modeless dialogs so that they are always destroyed when closed, or raised if opened
- KO Changed Layer_manager's layers to be instance-specific, rather than a static global
- KO Added File -> New Map to allow MapRoom to open multiple maps in one session

4/11/2013
---------------------------
- KO fixed #501 ("Merge Duplicate Points" Dialog Doesn't Find Duplicate Points)
- KO Changed the layer colors to match the colors used by Dan's build.
- KO Restored the properties panel behavior when selecting points to match Dan's build.

4/4/2013
---------------------------
- KO fixed #474 (Change zoom-on-scroll rate)
- KO fixed #497, for real this time :)